# cognitive-profile-test

./: .env.example  .gitignore  .gitlab-ci.yml  App.tsx  Dockerfile  Makefile  README.md  constants.ts  docker-compose.prod.yml  docker-compose.yml  export_tests.ts  index.css  index.html  index.tsx  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_api.py  test_asyncpg.py  translations.ts  types.ts  vite.config.ts  vitest.config.ts
ai-service/: Dockerfile  README.md  demo_mcp.py  pyproject.toml
ai-service/evals/: benchmark.py  metrics.py
ai-service/src/application/agents/: nodes.py
ai-service/src/application/workflows/: graph.py
ai-service/src/domain/: models.py  state.py
ai-service/src/infrastructure/llms/: factory.py
ai-service/src/infrastructure/mcp_tools/: adapter.py  sample_server.py
ai-service/src/infrastructure/vector_store/: pinecone_client.py
ai-service/src/presentation/api/: main.py
ai-service/tests/: test_domain.py
backend/: auth.py  db.py  delete_user_cli.py  main.py  migrate_cli.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  seed_tests_db.py  seeders.py  subscribers_cli.py  test_llm_middleware.py  tests_seed.json
components/: AdminDashboard.tsx  AppShare.tsx  Footer.tsx  Header.tsx  Pricing.tsx
db/: aphantasia_test.ts  demo_test.ts  perfectionism_test.ts  ysq_test.ts
hooks/: useDocumentTitle.ts  useFeatureFlags.ts  useSeoMetadata.ts
public/: robots.txt  sitemap.xml
scripts/: get-localized-questions.ts  notify_deploy.sh
services/: LoggingService.ts  ProfileService.ts  (+1 more)
(+66 files in other folders)
