[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "Agentic RAG microservice for Cognitive Profile Analysis"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.3"
langchain = "^0.2.0"
langchain-core = "^0.2.0"
langchain-google-genai = "^1.0.6"
langgraph = "^0.1.0"
pinecone-client = "^3.2.2"
mcp = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ragas = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
